fix: progressbar scrollbar height

--- a/src/assets/styles/scss/sections/home/hero.scss
+++ b/src/assets/styles/scss/sections/home/hero.scss
@@ -168,10 +168,6 @@
     padding-bottom: 20px;
 }
 
-.stats-container::-webkit-scrollbar {
-    height: 0px;
-}
-
 @media (min-width: 769px) {
     .stats-container::-webkit-scrollbar {
         height: 5px;
